--- a/templates/choose_singer.html
+++ b/templates/choose_singer.html
@@ -11,23 +11,32 @@
 		{%if data == "punjabi"%}
 
 		<div class="title">
-		<h1 class="display-4">Punjabi Singer</h1>
+		<h1 class="display-4">Punjabi Singers</h1>
 		
 		</div>
 		<label><input type="radio" name="singer" value="sidhu moosewala" checked="true"><div class="box">Sidhu Moosewala</div></label>
 		<label><input type="radio" name="singer" value="amrinder gill"><div class="box">Amrinder Gill</div></label>
-		<br>
 		<label><input type="radio" name="singer" value="karan aujla"><div class="box">Karan Aujla</div></label>
-		<label><input type="radio" name="singer" value="diljit"><div class="box">Diljit</div></label>
+		<label><input type="radio" name="singer" value="diljit dosanjh"><div class="box">Diljit Dosanjh</div></label>
+
 		
 		{%elif data == "english"%}
 
 		<div class="title">
-		<h1 class="display-4">English singer</h1>
+		<h1 class="display-4">English Singers</h1>
 		</div>
-		<label><input type="radio" name="singer" value="punjabi" checked="true"><div class="box">abc</div></label>
-		<label><input type="radio" name="singer" value="english"><div class="box">aaa</div></label>
-		<br>
+		<label><input type="radio" name="singer" value="taylor swift" checked="true"><div class="box">Taylor Swift</div></label>
+		<label><input type="radio" name="singer" value="travis scott"><div class="box">Travis Scott</div></label>
+		<label><input type="radio" name="singer" value="playboi carti"><div class="box">Playboi Carti</div></label>
+		<label><input type="radio" name="singer" value="drake"><div class="box">Drake</div></label>
+
+		{%elif data == "hindi"%}
+
+		<div class="title">
+		<h1 class="display-4">Hindi Singers</h1>
+		</div>
+		<label><input type="radio" name="singer" value="kishore kumar" checked="true"><div class="box">Kishore Kumar</div></label>
+		<label><input type="radio" name="singer" value="Arijit Singh"><div class="box">Arijit Singh</div></label>
 		<label><input type="radio" name="singer" value="hindi"><div class="box">bvc</div></label>
 		<label><input type="radio" name="singer" value="bhojpuri"><div class="box">cvb</div></label>
 		
