--- a/templates/choose_singer.html
+++ b/templates/choose_singer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>song recommend</title>
+	<title>Music Recommendation Model</title>
 	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
@@ -25,10 +25,10 @@
 		<div class="title">
 		<h1 class="display-4">English Singers</h1>
 		</div>
-		<label><input type="radio" name="singer" value="taylor swift" checked="true"><div class="box">Taylor Swift</div></label>
-		<label><input type="radio" name="singer" value="travis scott"><div class="box">Travis Scott</div></label>
-		<label><input type="radio" name="singer" value="playboi carti"><div class="box">Playboi Carti</div></label>
-		<label><input type="radio" name="singer" value="drake"><div class="box">Drake</div></label>
+		<label><input type="radio" name="singer" value="Taylor swift" checked="true"><div class="box">Taylor Swift</div></label>
+		<label><input type="radio" name="singer" value="Travis scott"><div class="box">Travis Scott</div></label>
+		<label><input type="radio" name="singer" value="Playboi carti"><div class="box">Playboi Carti</div></label>
+		<label><input type="radio" name="singer" value="Drake"><div class="box">Drake</div></label>
 
 		{%elif data == "hindi"%}
 
