--- a/templates/choose_singer.html
+++ b/templates/choose_singer.html
@@ -14,8 +14,9 @@
 		<h1 class="display-4">Punjabi Singers</h1>
 		
 		</div>
-		<label><input type="radio" name="singer" value="sidhu moosewala" checked="true"><div class="box">Sidhu Moosewala</div></label>
+		<label><input type="radio" name="singer" value="sidhu moosewala" ><div class="box">Sidhu Moosewala</div></label>
 		<label><input type="radio" name="singer" value="amrinder gill"><div class="box">Amrinder Gill</div></label>
+		<br>
 		<label><input type="radio" name="singer" value="karan aujla"><div class="box">Karan Aujla</div></label>
 		<label><input type="radio" name="singer" value="diljit dosanjh"><div class="box">Diljit Dosanjh</div></label>
 
@@ -25,20 +26,25 @@
 		<div class="title">
 		<h1 class="display-4">English Singers</h1>
 		</div>
-		<label><input type="radio" name="singer" value="Taylor swift" checked="true"><div class="box">Taylor Swift</div></label>
+		<label><input type="radio" name="singer" value="Taylor swift" ><div class="box">Taylor Swift</div></label>
 		<label><input type="radio" name="singer" value="Travis scott"><div class="box">Travis Scott</div></label>
+		<br>
 		<label><input type="radio" name="singer" value="Playboi carti"><div class="box">Playboi Carti</div></label>
 		<label><input type="radio" name="singer" value="Drake"><div class="box">Drake</div></label>
+		<br>
+		<input type="text" name="singer" class="extra">
 
 		{%elif data == "hindi"%}
 
 		<div class="title">
 		<h1 class="display-4">Hindi Singers</h1>
 		</div>
-		<label><input type="radio" name="singer" value="kishore kumar" checked="true"><div class="box">Kishore Kumar</div></label>
+		<label><input type="radio" name="singer" value="Kishore kumar" ><div class="box">Kishore Kumar</div></label>
 		<label><input type="radio" name="singer" value="Arijit Singh"><div class="box">Arijit Singh</div></label>
-		<label><input type="radio" name="singer" value="hindi"><div class="box">bvc</div></label>
-		<label><input type="radio" name="singer" value="bhojpuri"><div class="box">cvb</div></label>
+		<br>
+		<label><input type="radio" name="singer" value="Amit Trivedi"><div class="box">Amit Trivedi</div></label>
+		<label><input type="radio" name="singer" value="Pritam"><div class="box">Pritam</div></label>
+		<input type="text" name="singer">
 		
 		{%else%}
 		<div class="title">
