--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
 		<label><input type="radio" name="language" value="english"><div class="box">English</div></label>
 		<br>
 		<label><input type="radio" name="language" value="hindi"><div class="box">Hindi</div></label>
-		<label><input type="radio" name="language" value="western"><div class="box">Others</div></label>
+		<label><input type="radio" name="language" value="others"><div class="box">Others</div></label>
 
 		<br>
 		<input type="submit" name="btn" value="next" class="btn btn-outline-success btn-lg">
