--- a/templates/choose_singer.html
+++ b/templates/choose_singer.html
@@ -19,6 +19,8 @@
 		<br>
 		<label><input type="radio" name="singer" value="karan aujla"><div class="box">Karan Aujla</div></label>
 		<label><input type="radio" name="singer" value="diljit dosanjh"><div class="box">Diljit Dosanjh</div></label>
+		<br>
+		<input type="text" name="singer" placeholder="Some Other Singer:">
 
 		
 		{%elif data == "english"%}
@@ -32,7 +34,7 @@
 		<label><input type="radio" name="singer" value="Playboi carti"><div class="box">Playboi Carti</div></label>
 		<label><input type="radio" name="singer" value="Drake"><div class="box">Drake</div></label>
 		<br>
-		<input type="text" name="singer" class="extra">
+		<input type="text" name="singer" placeholder="Some Other Singer:">
 
 		{%elif data == "hindi"%}
 
@@ -44,7 +46,7 @@
 		<br>
 		<label><input type="radio" name="singer" value="Amit Trivedi"><div class="box">Amit Trivedi</div></label>
 		<label><input type="radio" name="singer" value="Pritam"><div class="box">Pritam</div></label>
-		<input type="text" name="singer">
+		<input type="text" name="singer" placeholder="Some Other Singer:">
 		
 		{%else%}
 		<div class="title">
