--- a/templates/choose_singer.html
+++ b/templates/choose_singer.html
@@ -57,7 +57,7 @@
 		{%endif%}
 
 		<br>
-		<input type="submit" name="btn" value="next" class="btn btn-outline-success btn-lg">
+		<input type="submit" name="btn" value="Detect Emotion" class="btn btn-outline-success btn-lg">
 	</form>
 
 </body>
