--- a/templates/emotion_detect.html
+++ b/templates/emotion_detect.html
@@ -8,7 +8,7 @@
 <body style="background-color: #edffec;">
 
 	<div class="title">
-		<h1 class="display-4">You seem {{data}}</h1>
+		<h1 class="display-4">Emotion Recognized: {{data}}</h1>
 		<h1><a href="{{link}}" title="">Click Here!</a></h1>
 	</div>
 
