--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Music Recommendation System</title>
+	
 	<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
 <body style="background-color: #edffec;">
-
+	
 	<div class="title">
+		<h1 class = head>Facial Recognition Based Music Recommendation System</h1>
 		<h1 class="display-4">Select Language</h1>
 	</div>
 
